--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="/src/assets/logos/favicon.ico"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inicio de sesión</title>
+    <title>Sabia</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
